--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/roboto-mono": "^5.2.6",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
     "preact": "^10.26.9",
     "react-icons": "^5.5.0"
