--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "vercel-dev": "vercel dev",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -21,6 +22,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "vercel": "^50.1.3",
     "vite": "^5.4.10"
   }
 }
